--- a/java_basic_examples/hello_motion_tracking/build.gradle
+++ b/java_basic_examples/hello_motion_tracking/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile fileTree(dir: external_lib_prefix + '/jar', include: ['**/*.jar'])
+
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'org.greenrobot:eventbus:3.0.0'
 }
