--- a/java_basic_examples/hello_motion_tracking/src/main/AndroidManifest.xml
+++ b/java_basic_examples/hello_motion_tracking/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="19"
         android:targetSdkVersion="19" />
     
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
     <application
@@ -16,9 +18,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <uses-library android:name="com.projecttango.libtango_device2"
-            android:required="true" />
-        <activity android:name=".HelloMotionTrackingActivity"
+            android:required="false" />
+
+        <activity android:name=".ViewFlightInfoActivity"
             android:label="@string/app_name_long"
             android:screenOrientation="fullSensor">
             <intent-filter android:label="@string/app_name">
@@ -26,6 +30,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".HelloMotionTrackingActivity"
+            android:label="@string/app_name_long"
+            android:screenOrientation="fullSensor">
+            <!--
+            <intent-filter android:label="@string/app_name">
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            -->
+        </activity>
+
     </application>
 
 </manifest>
