--- a/java_basic_examples/hello_motion_tracking/build.gradle
+++ b/java_basic_examples/hello_motion_tracking/build.gradle
@@ -42,4 +42,5 @@ dependencies {
 
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.google.code.gson:gson:2.7'
 }
