--- a/java_basic_examples/hello_motion_tracking/src/main/AndroidManifest.xml
+++ b/java_basic_examples/hello_motion_tracking/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:targetSdkVersion="19" />
     
     <uses-permission android:name="android.permission.INTERNET" />
-    
+
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
     <application
@@ -22,15 +24,34 @@
         <uses-library android:name="com.projecttango.libtango_device2"
             android:required="false" />
 
+        <!-- Looks up flight info -->
         <activity android:name=".ViewFlightInfoActivity"
             android:label="@string/app_name_long"
             android:screenOrientation="fullSensor">
+            <!--
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            -->
         </activity>
 
+        <!-- Starts or stops overlay -->
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- Shows overlay -->
+        <service android:name=".ChatHeadService" >
+        </service>
+
+        <!-- Tracks position indoors and logs it -->
         <activity android:name=".HelloMotionTrackingActivity"
             android:label="@string/app_name_long"
             android:screenOrientation="fullSensor">
