--- a/java_basic_examples/hello_motion_tracking/src/main/AndroidManifest.xml
+++ b/java_basic_examples/hello_motion_tracking/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.projecttango.examples.java.hellomotiontracking"
+    package="name.nanek.changimon"
     android:versionCode="0"
     android:versionName="0">
     
@@ -28,31 +28,30 @@
         <activity android:name=".ViewFlightInfoActivity"
             android:label="@string/app_name_long"
             android:screenOrientation="fullSensor">
-            <!--
             <intent-filter android:label="@string/app_name">
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- Starts or stops overlay -->
+        <activity
+            android:name=".DebugOverlayActivity"
+            android:label="@string/app_name" >
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             -->
         </activity>
 
-        <!-- Starts or stops overlay -->
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
         <!-- Shows overlay -->
-        <service android:name=".ChatHeadService" >
+        <service android:name=".service.FlightRecordOverlayService" >
         </service>
 
         <!-- Tracks position indoors and logs it -->
-        <activity android:name=".HelloMotionTrackingActivity"
+        <activity android:name=".ViewAirportMapActivity"
             android:label="@string/app_name_long"
             android:screenOrientation="fullSensor">
             <!--
