--- a/java_basic_examples/hello_motion_tracking/src/main/AndroidManifest.xml
+++ b/java_basic_examples/hello_motion_tracking/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
         <!-- Tracks position indoors and logs it -->
         <activity android:name=".activity.ViewAirportMapActivity"
             android:label="@string/app_name_long"
-            android:screenOrientation="fullSensor">
+            android:screenOrientation="landscape">
             <!--
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
