--- a/java_basic_examples/hello_motion_tracking/src/main/AndroidManifest.xml
+++ b/java_basic_examples/hello_motion_tracking/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <!-- Looks up flight info -->
         <activity android:name=".activity.ViewFlightInfoActivity"
             android:label="@string/app_name_long"
-            android:screenOrientation="fullSensor">
+            android:screenOrientation="portrait">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
